# lexy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: gitlab_sync.yml
data/files/: C.c  Dart.dart  Docker.bat  Elixir.ex  Lua.lua  OCaml.ml  PHP.php  Pug.pug  Python.py  Ruby.rb  Sorbet.rb  Vim.txt
data/json/: languages.json
docs/: .nav.yml  getting started.md  index.md  installation.md  theming.md  usage.md
src/: fetch_xny.py
src/lexy/: lexy.py
src/lexy_helpers/: config.py  fetch_lexy.py  output_helpers.py
test/: lexy_test.py
